<?xml version="1.0"?>
<package format="2">
  <name>audio_recorder</name>
  <version>0.1.0</version>
  <description>Audio recording package for dataset collection using audio_common</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>audio_capture</exec_depend>
  <exec_depend>audio_common_msgs</exec_depend>
</package>
