<?xml version="1.0"?>
<package format="2">
  <name>sensor_dataset_recorder</name>
  <version>0.1.0</version>
  <description>Multi-sensor dataset recording with MCAP format</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>iiwa_msgs</exec_depend>
  <exec_depend>rosbag</exec_depend>
</package>
