<?xml version="1.0"?>
<package format="2">
  <name>ultrasound_capture</name>
  <version>0.1.0</version>
  <description>Ultrasound video capture from HDMI grabber (Magewell USB Capture HDMI+)</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
